Edit title for time remaining / counter balance effect

--- a/Analysis/Analysis_TimeRemaining_CounterBalanceEffect.Rmd
+++ b/Analysis/Analysis_TimeRemaining_CounterBalanceEffect.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Dissertation Analysis: Examining Counterbalance Effects'
+title: 'Dissertation Analysis: Time Remaining - Examining Counterbalance Effects'
 author: "Jamiahus Walton"
 date: "`r Sys.Date()`"
 output: html_document
